k8s/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-frontend
  labels:
    app: micro-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: micro-frontend
  template:
    metadata:
      labels:
        app: micro-frontend
    spec:
      containers:
       - name: micro-frontend
         image: mmsalmanfaris/micro-frontend:v1
         ports:
          - containerPort: 80
