k8s/go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-go
  labels:
    app: micro-go

spec:
  replicas: 2
  selector:
    matchLabels:
      app: micro-go
  template:
    metadata:
      labels:
        app: micro-go
    
    spec:
      containers:
        - name: micro-go
          image: mmsalmanfaris/micro-go:v1
          ports:
            -  containerPort: 8081
