k8s/java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-java
  labels:
    app: micro-java
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: micro-java
  template:
    metadata:
      labels:
        app: micro-java
    spec:
      containers:
        - name: micro-java
          image: mmsalmanfaris/micro-java:v1
          ports:
           - containerPort: 8084
