k8s/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-nodejs
  labels:
   app: micro-nodejs

spec:
  replicas: 2
  selector:
    matchLabels:
      app: micro-nodejs
  template:
    metadata:
      labels:
        app: micro-nodejs
    spec:
      containers:
        - name: micro-nodejs
          image: mmsalmanfaris/micro-nodejs:v1
          ports:
            - containerPort: 8083
