k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: devsecops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: mmsalmanfaris/devsecops-frontend-service:v.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: devsecops
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    # nodePort: 30080
  type: LoadBalancer
