k8s/go-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: go-service
spec:
  selector:
    app: micro-go
  port:
    - port: 8081
      targetPort: 8081
