k8s/java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  type: NodePort
  selector:
    app: micro-java
  ports:
   -  port: 8084
      targetPort: 8084
      nodePort: 30084
