k8s/jave-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  selector:
    app: micro-java
  ports:
   -  port: 8084
      targetPort: 8084
