k8s/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: NodePort
  selector:
    app: micro-nodejs
  ports:
   - protocol:  TCP
     port: 8083
     targetPort: 8083
     nodePort: 30083
