k8s/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    app: micro-python
  ports:
   - port: 8082
     targetPort: 8082
