k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: micro.com
    http:
      paths:
      - path: /api/python
        pathType: Prefix
        backend:
          service:
            name: python-service
            port:
              number: 8082
      - path: /api/nodejs
        pathType: Prefix
        backend:
          service:
            name: nodejs-service
            port:
              number: 8083
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
